Add content preservation and selective migration to the reactions migration tool
Preservation: a migration now carries user-written content in derived models
across the rule change instead of dropping it, matching old to new elements over
the correspondence bridge. Undecidable matches are asked about or reported, and
every run writes a preservation-report.md naming what was kept, lost or left
open (--preserve off|report|user|all, --ask auto|never).

Selective migration: --mode ids|hashes repropagates only the elements the
changed rules' triggers name, instead of re-deriving everything. Rule ids and
hashes are persisted in the VSUM's rule registry so a later run can diff them,
and the run falls back to a full migration when the selective path cannot be
trusted.

Reactions language: consistency rules now expose their triggers and hashes to
the generated specifications, via a new ConsistencyRuleTriggerCalculator and the
change-type representation, with tests covering trigger kinds and agreement.

Test material: the library example replaces the shop example as the persisted
VSUM fixture, and the nine umljava-configN propagation jars are committed so the
config matrix can run offline.

Config matrix: a generator and per-row tests cover all 81 configN-to-configM
migrations, driven by the new build-propagation-jars, generate-config-matrix and
preprocess-configs scripts.

Also cleans up static analysis warnings across the module: slf4j logging instead
of System.out, try-with-resources around the specification jar class loaders,
and assorted complexity and duplication fixes.