@@ -1,12 +1,17 @@
 package tools.vitruv.dsls.reactions.migration.adapter;
 
+import java.nio.file.Path;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.EObject;
+import org.eclipse.emf.ecore.EPackage;
 import org.eclipse.emf.ecore.resource.Resource;
+import org.eclipse.emf.ecore.resource.ResourceSet;
+import org.eclipse.emf.ecore.resource.impl.ResourceSetImpl;
 
 public class AdapterRegistry {
   private final List<MetamodelAdapter> adapters;
@@ -23,6 +28,10 @@ public class AdapterRegistry {
   }
 
   public MetamodelAdapter adapterFor(String nsUri) {
+    if (nsUri == null) {
+      return fallback;
+    }
+
     return adapters.stream().filter(adapter -> adapter.handles(nsUri)).findFirst().orElse(fallback);
   }
 
@@ -31,7 +40,9 @@ public class AdapterRegistry {
   }
 
   public MetamodelAdapter adapterFor(Resource resource) {
-    return resource.getContents().isEmpty() ? fallback : adapterFor(resource.getContents().get(0));
+    return resource.getContents().isEmpty()
+        ? fallback
+        : adapterFor(resource.getContents().getFirst());
   }
 
   public void prepareStandalone() {
@@ -45,12 +56,48 @@ public class AdapterRegistry {
     return options;
   }
 
-  public boolean isPlatformLibraryResource(URI uri) {
-    return adapters.stream().anyMatch(adapter -> adapter.isPlatformLibraryResource(uri))
-        || fallback.isPlatformLibraryResource(uri);
+  public ResourceSet newResourceSet() {
+    ResourceSet resourceSet = new ResourceSetImpl();
+    resourceSet.getLoadOptions().putAll(combinedLoadOptions());
+    return resourceSet;
+  }
+
+  public Resource load(ResourceSet resourceSet, URI uri) {
+    Resource resource = resourceSet.getResource(uri, true);
+    adapterFor(resource).normalizeLoadedResource(resource);
+    return resource;
+  }
+
+  public boolean isPlatformLibraryResource(URI uri, Path vsumFolder) {
+    if (uri == null) {
+      return true;
+    }
+
+    String relativePath = ResourcePaths.relativize(uri, vsumFolder);
+    return relativePath == null || adapterFor(uri).isPlatformLibraryResource(relativePath);
+  }
+
+  public boolean isMigratedModel(URI uri, Path vsumFolder) {
+    return uri != null && uri.isFile() && !isPlatformLibraryResource(uri, vsumFolder);
+  }
+
+  private MetamodelAdapter adapterFor(URI uri) {
+    return adapters.stream()
+        .filter(adapter -> adapter.claimsResource(uri))
+        .findFirst()
+        .orElse(fallback);
   }
 
   public boolean anyRootRequiresChangeRecording(Collection<EObject> roots) {
     return roots.stream().anyMatch(root -> adapterFor(root).requiresChangeRecording());
+  }
+
+  public Optional<String> externalIdentityOf(EObject element) {
+    EPackage owner = element.eClass() == null ? null : element.eClass().getEPackage();
+    if (owner == null) {
+      return Optional.empty();
+    }
+
+    return adapterFor(owner.getNsURI()).externalIdentityOf(element);
   }
 }
